# Parser

./: CMakeLists.txt  README.md  astnode.cpp  astnode.h  binaryoperator.cpp  binaryoperator.h  interpreter.cpp  interpreter.h  lexer.cpp  lexer.h  main.cpp  number.cpp  number.h  parser.cpp  parser.h  token.h
tests/: CMakeLists.txt  main.cpp  tst_simpletest.h
